<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_red">

    <LinearLayout
        android:id="@+id/main_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/T"
            android:textColor="@color/heresy_gold"
            android:textSize="@dimen/high_word"
            />
        <TextView
            android:id="@+id/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/he"
            android:textColor="@color/heresy_gold"
            android:textSize="@dimen/low_word"
            />
        <TextView
            android:id="@+id/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddin_between_words"
            android:text="@string/H"
            android:textColor="@color/heresy_gold"
            android:textSize="@dimen/high_word"
            />
        <TextView
            android:id="@+id/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orus"
            android:textColor="@color/heresy_gold"
            android:textSize="@dimen/low_word"
            />
        <TextView
            android:id="@+id/h5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddin_between_words"
            android:text="@string/H"
            android:textColor="@color/heresy_gold"
            android:textSize="@dimen/high_word"
            />
        <TextView
            android:id="@+id/h6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eresy"
            android:textColor="@color/heresy_gold"
            android:textSize="@dimen/low_word"
            />
    </LinearLayout>
        <TextView
            android:id="@+id/h7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/heresy_gold"
            android:text="@string/unoff"
            android:textSize="@dimen/nano_word"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/image_margin"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_relative"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_for_text_above_spinner"
        android:textColor="@color/heresy_gold"
        android:text="@string/selector"
        android:textSize="@dimen/select_word"
        />
    <Spinner
        android:id="@+id/spinner"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_selector"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_for_spinner"
        />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_start"
        android:background="@drawable/button_background"
        android:textSize="@dimen/start_button_text_size"
        android:textColor="@color/heresy_gold"
        android:padding="@dimen/padding_for_spinner"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:onClick="start"/>
</RelativeLayout>